####################
Bazaar Release Notes
####################

.. contents:: List of Releases
   :depth: 1

bzr 2.2b2
#########

:2.2b2: NOT RELEASED YET

Compatibility Breaks
********************

New Features
************

* ``bzr diff`` now supports a --format option, which can be used to 
  select alternative diff formats. (Jelmer Vernooij, #555994)

Bug Fixes
*********

* Make sure the ``ExecutablePath`` and ``InterpreterPath`` are set in
  Apport crash reports, to avoid "This problem report applies to a program
  which is not installed any more" error.
  (Martin Pool, James Westby, #528114)

* When invoked with a range revision, ``bzr log`` doesn't show revisions
  that are not part of the ancestry anymore.
  (Vincent Ladeuil, #474807)

Improvements
************

* ``bzr commit`` will prompt before using a commit message that was
  generated by a template and not edited by the user.
  (Robert Collins, #530265)

* Index lookups in pack repositories search recently hit pack files first.  
  In repositories with many pack files this can greatly reduce the
  number of files accessed, the number of bytes read, and the number of
  read calls.  An incremental pull via plain HTTP takes half the time and
  bytes for a moderately large repository.  (Andrew Bennetts)

* Less code is loaded at startup.  (Cold-cache start time is about 10-20%
  less.)
  (Martin Pool, #553017)

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******


bzr 2.2.0b1
###########

:2.2.0b1: Not released yet

Compatibility Breaks
********************

* BTreeGraphIndex can now take an offset to indicate that the data starts
  somewhere other than then beginning of the file. (John Arbash Meinel)

* Deleted very old hidden commands ``versionedfile-list``,
  ``weave-plan-merge``, ``weave-merge-text``.
  (Martin Pool)

* ``Repository.get_inventory_sha1()`` and ``Repository.get_revision_xml()`` 
  have been removed. (Jelmer Vernooij)
